--- a/main/assets/gtcebees/lang/zh_tw.lang
+++ b/main/assets/gtcebees/lang/zh_tw.lang
@@ -3,7 +3,7 @@ for.bees.species.certus=石英岩
 for.bees.species.chrome=鉻
 for.bees.species.coal=煤炭
 for.bees.species.copper=銅
-for.bees.species.diamond=鉆石
+for.bees.species.diamond=鑽石
 for.bees.species.emerald=綠寶石
 for.bees.species.gold=金
 for.bees.species.iridium=銥
@@ -37,7 +37,7 @@ item.gtcebees:comb.certus.name=石英岩蜂窩
 item.gtcebees:comb.chromium.name=鉻蜂窩
 item.gtcebees:comb.coal.name=煤炭蜂窩
 item.gtcebees:comb.coppon.name=銅蜂窩
-item.gtcebees:comb.diamond.name=鉆石蜂窩
+item.gtcebees:comb.diamond.name=鑽石蜂窩
 item.gtcebees:comb.emerald.name=綠寶石蜂窩
 item.gtcebees:comb.ferru.name=鐵蜂窩
 item.gtcebees:comb.galvania.name=鋅蜂窩
